--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- 1. CORRECT BRANDING & SEO (Fixes the Identity Crisis) -->
     <title>Aortrix Automations - AI & Web Solutions</title>
     <meta name="description" content="Aortrix Automations provides future-ready AI solutions, custom web development, and digital automation services in Calicut, Kerala." />
 
-    <!-- 2. FAVICON SETUP (Fixes the Default Icon Issue) -->
-    <!-- Ensure these files exist in your root/public folder -->
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> <!-- Optional if you have SVG -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
